# ChangeLog for Gentoo System Intialization core utilities.
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2
# $Header$

  17 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    parse.c, parse.h: Rewrote large parts of generate_stage[12]() and their
                      machanics to use select() when writing to the pipes.
                      This fixes a buffering issue where too much data would
                      cause the write to be truncated, and the read pipe would
                      then wait forever.

  17 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    misc.c: Fix gbasename() to compile under gcc-2.95.3.
    parse.c: Switch to stdio based io for reading pipes in generate_stage2().

  17 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    misc.c, misc.h: Add gbasename() that is similar to GNU's basename().
    parse.c: Use gbasename() instead of POSIX version.

  17 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    parse.c: Fix write_legacy_stage3() to quote the mtime in its output.

  17 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    misc.c, parse.c: Change type of length from int to size_t to avoid warnings
                     when compiled for darwin.

  17 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    misc.c, misc.h: Add strndup() instead of relying on glibc's implementation
                    (should fix some issues on bsd and darwin).
    depend.c, simple-regex.c: Do not define _GNU_SOURCE, but rather use our
                              strndup() from misc.h.
    parse.c: Do not define _GNU_SOURCE, but rather use our strndup() from
             misc.h.  Also change all usage of basename() to conform to POSIX,
             and not use the GNU variants.

  16 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    depscan.c: Add uid check and quit if user is not root.

  16 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    depend.c, depend.h: Change service_type_names declaration in depend.h to